<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu1">\u0020\u0020关于©Copyright \u0020\u0020中邮保险广东分公司</string>
    <string name="menu2">更  新</string>
    <string name="app_name">中邮保险保全工具</string>
    <string name="productInfo">客服热线：400-890-9999 \n中邮保险广东分公司 \n运营管理部 荣誉出品  \n</string>
    <string name="copyright">Copyright © 2013 - 2014</string>
    <string name="ver">Version: 1.0.0 (build20140510)</string>
    <string name="suport">技术支持：Aming（6901028@qq.com）\n首席顾问：王鹤</string>
	<string name="searchLabel">保全项目查询</string>
	<string name="limitError1">查询条件不符合产品设置</string>
	<string name="updateServer">http://1.beming.sinaapp.com/android/zyrs/zybq.json</string>
	<string name="thanksStr">\n\u0020\u0020\u0020\u0020感谢以下同事的帮助：省分王鹤</string>
	<string name="updateTips">提醒：版本有更新，请点击菜单键选择更新</string>
	<string name="logTips">更新日志：</string>
	<string name="tdyb">查看填单样本影像件</string>
	<string name="yc">犹豫期期内撤单</string>
	<string name="yctj1">申请人：投保人</string>
	<string name="yctj2">（须在犹豫期内申请）</string>
	<string name="tbtj2">（须过犹豫期后申请）</string>
	<string name="sjclqtj1">申请人：生存保险金受益人</string>
	<string name="sjclqtj2">（若未指定生存受益人，则为被保险人)</string>
	<string name="sjclqtj3">保险合同满期日或约定生存保险金给付日起</string>
	<string name="yczl1">\u00201、《保险合同变更申请书》</string>
	<string name="yczl2">\u00202、投保人身份证明文件原件</string>
	<string name="yczl3">\u00203、保险合同原件</string>
	<string name="yczl4">\u00204、首期保险费收据或发票</string>
	<string name="yczl5">\u00205、资料交接凭证</string>
	<string name="yczl6">\u00206、若委托他人办理，须提供委托人亲笔签名的《授权委托书》及受托人身份证明文件原件</string>
	<string name="ycgz1">1、犹豫期撤单一般应由投保人亲自办理。</string>
	<string name="ycgz2">2、若保险单遗失情况下申请犹豫期撤单，客户须填写《遗失责任声明书》</string>
	<string name="ycgz3">3、犹撤必须提供交费凭证，如遗失，须在申请书上备注“首期交费凭证遗失，数据以系统为准”</string>
	<string name="ycgz4">备注：系统客户申请日期为网点章戳日期</string>
	<string name="tbgz1">1、退保一般应由投保人亲自办理。</string>
	<string name="tbgz2">2、若保险单遗失情况下申请退保，客户须填写《遗失责任声明书》</string>
	<string name="zyjktj1">借款申请人：投保人</string>
	<string name="zyjktj2">\u0020（须经被保险人签名同意）</string>
	<string name="zyjktj3">\u0020※ 借款申请时间</string>
	<string name="zyjktj4">\u00201、保险合同有效期内，且具有现金价值</string>
	<string name="zyjktj5">\u00202、趸交保单生效以后；但期交保单须成功交纳第二期保费后</string>
	<string name="zyjktj6">\u00203、借款到期日需在保险期间届满前2个月</string>
	<string name="tb">退保</string>
	<string name="zyjk">质押借款</string>
	<string name="zyhk">质押还款</string>
	<string name="jsbe">减少保额</string>
	<string name="bdbf">保单补发（客户申请）</string>
	<string name="scjlq">生存金领取</string>
	<string name="jfxxbg">缴费信息变更</string>
	<string name="tbrbg">投保人变更</string>
	<string name="syrbg">受益人变更</string>

</resources>