<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:autoLink="email|phone|web" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="400dip"
        android:maxHeight="400dip"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/zyrs" />
    
    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suport"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/thansStr"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:text="@string/thanksStr"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/logStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logTips"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <WebView  
	    android:id="@+id/logView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>

</LinearLayout>
